# 4d-card-generator

./: .env.example  .gitignore  LICENSE  README.md  generate_card.py  layered_4d_card_pipeline.py  pyproject.toml
assets/repo_preview_images/: README.md
docs/: index.html
docs/demo/: README.md  manifest.json  scene_manifest.json  style_bible.json  viewer.html
examples/: sample_config.json
examples/sample_output/: README.md
scripts/: generate_readme_assets.py
src/fourd_card/: __init__.py  cli.py  config.py  image_helpers.py  manifests.py  models.py  openai_pipeline.py  overlays.py  pipeline.py  prompts.py  viewer.py
viewer_template/: viewer.html
